common/force-app/main/default/objects/Mobile_Verification__c/Mobile_Verification__c.object-meta.xml
<CustomObject>
    <description>Custom object to store the 2FA codes that will be generated and used for verification</description>
    <label>Mobile Verification</label>
    <nameField>
        <label>Mobile Verification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>