common/force-app/main/default/objects/Mobile_Verification__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the MobileVerification record is currently active and awaiting verification</description>
    <inlineHelpText>Check this box if the mobile verification process is still active and awaiting user input. This helps track whether the verification is ongoing or has been completed or expired.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>