common/force-app/main/default/objects/Mobile_Verification__c/fields/Expiry__c.field-meta.xml
<CustomField>
    <fullName>Expiry__c</fullName>
    <description>The date and time when the verification token or process expires. (5 Minutes after the record is created)</description>
    <formula>CreatedDate + (5/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The expiration date and time for the verification token.</inlineHelpText>
    <label>Expiry</label>
    <type>DateTime</type>
</CustomField>