common/force-app/main/default/objects/Mobile_Verification__c/fields/isVerified__c.field-meta.xml
<CustomField>
    <fullName>isVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the mobile number has been successfully verified.</description>
    <inlineHelpText>Check this box if the mobile number has been successfully verified. This status helps track whether the verification process has been completed.</inlineHelpText>
    <label>isVerified</label>
    <type>Checkbox</type>
</CustomField>