common/force-app/main/default/objects/Mobile_Verification__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <description>The mobile phone number that is being verified.</description>
    <inlineHelpText>Enter the mobile number that requires verification. Ensure the number is in the correct format to facilitate successful verification.</inlineHelpText>
    <label>Mobile Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>