common/force-app/main/default/objects/Mobile_Verification__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to the user associated with this mobile verification process.</description>
    <inlineHelpText>Use this lookup field to associate the mobile verification with the correct user. This ensures that the verification is tied to the appropriate user&apos;s account.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mobile_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>