common/force-app/main/default/objects/Mobile_Verification__c/fields/Verification_Token__c.field-meta.xml
<CustomField>
    <fullName>Verification_Token__c</fullName>
    <description>A token or code sent to the mobile number for verification purposes.</description>
    <inlineHelpText>This field stores the verification token sent to the user. The user will need to provide this token to complete the verification process.</inlineHelpText>
    <label>Verification Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>