common/force-app/main/default/objects/Mobile_Verification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Verification_Token__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>